k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: autodeploy
  labels:
    app.kubernetes.io/name: autodeploy
    app.kubernetes.io/part-of: autodeploy-platform
